[refactor][plugin][datareader] Enhance readability and structure in DataReader by simplifying conditionals, improving error messages, and using modern Java features